# git-ai-commit

./: .git-ai-commit.yml.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
git_ai_commit/: __init__.py  ai_backends.py  cli.py  config.py  git_utils.py  models.py  ui.py
tests/: test_backends.py  test_config.py  test_models.py
